--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,10 +12,12 @@
     <p>Is this working?</p>
 
     <form id="message">
+        <input type="text" id="inputName" name="NameMessage" placeholder="Enter name here">
         <input type="text" id="inputMessage" name="inputMessage" placeholder="Enter message here">
         <button id="submitMessage" class="btn btn-info">Submit Message</button>
-
     </form>
+
+    <div id="messageContainer"></div>
 
 </body>
 </html>
